# DiaModality

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.cfg_  setup.py  setup.py_
.github/workflows/: python-publish.yml  release.yml  tests.yml
demo/: demo_modality_plot.py  run_demo.bat  run_demo.ps1  run_demo.sh
demo/demo_data/: generate_modality_data.py  modality_A_boutons.csv  modality_A_fibers.csv  modality_C_boutons.csv  modality_C_fibers.csv  modality_Neurons.csv  modality_data.csv
src/DiaModality/: ModalityPlot.py
src/NeuroPlot/: modality_plot.py  parse_csv.py
src/NeuroPlot.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/NeuronPlotLib/: CsvParser.py  ModalityPlot.py
tests/: test_diamodality.py
