[metadata]      
name = NeuronPlotLib
license = MIT
description = Simple tool to make extended scientific diagrams
long_description = file: README.md, LICENSE
author = konung-yaropolk
author_email = yaropolk1995@gmail.com
url = https://github.com/konung-yaropolk/NeuronPlotLib
keywords = Visualization, Plotting, Matplotlib
classifiers=
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Visualization

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.10
install_requires = 
    matplotlib
    numpy

[options.packages.find]
where=src
exclude =
    demo*

[options.entry_points]


[options.package_data]

